<resources>
    <string name="app_name">My Work Shifts</string>
    <string name="action_edit">Edit account</string>
    <string name="action_exit">Exit App</string>
    <string name="same_hour_error">Start hour and End hour are the same.</string>
    <string name="hour_error">End hour can not be before start hour.</string>
    <string name="empty_fields_add_shift">Fill te fields correctly before saving</string>
    <string name="shift_saved">Shift saved</string>
    <string name="shift_not_saved">Shift not saved</string>
    <string name="success">Success!</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="edit_saved">Edit saved</string>
    <string name="edit_not_saved">Edit not saved</string>
    <string name="form_incomplete">You have to complete the form first.</string>
    <string name="email_password_error">Error in mail or password.</string>
    <string name="reg_complete">Registration complete.</string>
    <string name="enter_work_hours">Please enter the work hours for %1$s the %2$d in %3$s, %4$d</string>
    <string name="total_work_hours">Total work time on this day: %1$s</string>
    <string name="total_earn_for_shift">You earned %1$s this shift.</string>
    <string name="work_hours">Work Hours</string>
    <string name="welcome_note">Please select date on the calender to view more.</string>
    <string name="start_hour">Start hour</string>
    <string name="end_hour">End hour</string>
    <string name="empty_hour">00:00</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name</string>
    <string name="hourly_wage">Hourly Wage</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="login_button">Existing user ? Login</string>
    <string name="register_button">First time? Create your account</string>
    <string name="login">Login</string>
    <string name="save_edit_button">Save edit</string>
    <string name="cancel_edit_button">Cancel Edit</string>
    <string name="example_text">Example text will change after running</string>
    <string name="add_shift_start_hour_edit_text">Start Hour 00:00</string>
    <string name="add_shift_end_hour_edit_text">End Hour 00:00</string>
    <string name="add_shift_save_button">Save Shift</string>
    <string name="add_shift_cancel_button">Cancel</string>
</resources>
