<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/login"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-251dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <EditText
            android:id="@+id/etFirstName"
            style="@style/SimpleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFilledBackground"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/SimpleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFilledBackground"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etCompany"
            style="@style/SimpleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFilledBackground"
            android:ems="10"
            android:hint="@string/company_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etHourlyWage"
            style="@style/SimpleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFilledBackground"
            android:ems="10"
            android:hint="@string/hourly_wage"
            android:inputType="number" />

        <EditText
            android:id="@+id/etrEmail"
            style="@style/SimpleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFilledBackground"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etrPassword"
            style="@style/SimpleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFilledBackground"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="fill_vertical|end"
            android:hapticFeedbackEnabled="false"
            android:onClick="finish"
            android:text="@string/complete_registration"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>